test/classes/initializers/parentCall/inOnCobegin.good
inOnCobegin.chpl:4: In initializer:
inOnCobegin.chpl:8: error: use of this.complete() call in a parallel statement
